# PhytClust

./: .dockerignore  .gitignore  CHANGELOG.md  CITATION.cff  Dockerfile  MANIFEST.in  NB01_final01_no_ecdna_snapped_rm_out_final_tree.no_normals.newick  README.md  mkdocs.yml  phylotreeclus  phylotreeclus.py  phytclust.config.yaml  phytclust.py  pyproject.toml  pytest.ini  setup.py
.github/workflows/: docs.yml
PhyloTreeClustering/: PhyloTreeClustering.py  calinski_harabasz.py  medicc_functions.py
PhytClust/: pairwise_distances.py  phytclust.py
doc/: OV_25_cancer.newick  demo.ipynb  sample_bootstrap.newick
doc/example/: demo.ipynb
docs/: concepts.md  getting-started.md  index.md  visualisation.md
docs/reference/: api.md  cli.md  configuration.md
docs/stylesheets/: extra.css
docs/tutorials/: cli-end-to-end.md  python-end-to-end.md
examples/: OV_25_cancer.newick  demo.ipynb  phytclust.config.yaml  sample_polytomy.newick  sample_tree.nwk
gui/: app.py
gui/templates/: index.html
phylotreeclus.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
phytclust/: __init__.py  find_peaks.py  greedy_alg.py  helper.py  indices.py  main.py  maximize_pd.py  phytclust.py  plotting.py  save.py  utils.py  validation.py
phytclust.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/simulations/generate_clusters/: config_multi.json  config_single.json  generate_clusters.py  run_multi_simulation.py  run_single_simulation.py  tree_operations.py  utils.py
scripts/simulations/internal/phytclust/: phytclust_single_k.py
scripts/simulations/internal/random/: random_single.py
simulations_2/scripts/: data_alter.py  normalize_vmeasure.py  phytclust_all_k.py  phytclust_greedy_all_k.py  phytclust_greedy_single_k.py  phytclust_single_k.py  random_single.py  run_all.py  run_phylopart.py  run_random.py
simulations_2/simulation_script/: config_multi.json  config_single.json  generate_clusters.py  run_multi_simulations.py  run_sims.py  run_single_simulation.py  tree_operations.py  utils.py
src/phytclust/: __init__.py  config.py  exceptions.py  io.py  validation.py
src/phytclust/algo/: __init__.py  bins.py  bootstrap_stability.py  core.py  dp.py  dp_polytomy.py  dp_utils.py  scoring.py
src/phytclust/cli/: __main__.py  _cli.py
src/phytclust/config/: README.md  __init__.py  core.py  outlier.py  peak.py  runtime.py
src/phytclust/gui/: README.md  api.py
src/phytclust/gui/static/: app.css  phylotree.css  phylotree.js  tree_viz.js
src/phytclust/gui/static/css/: animations.css  appearance.css  base.css  footer.css  help.css  main.css  modals.css  nav.css  responsive.css  scores.css  sidebar.css  toast.css  tree.css  viz.css
src/phytclust/gui/templates/: index.html
src/phytclust/io/: save.py  save_results.py
src/phytclust/metrics/: __init__.py  indices.py
src/phytclust/selection/: __init__.py  pd_representatives.py  representatives.py
src/phytclust/utils/: tree.py
src/phytclust/viz/: __init__.py  cluster.py  cluster_plot.py  draw.py  palette.py  plotting.py  scores.py  scores_plot.py
tests/: test_api.py  test_bins.py  test_cache.py  test_cli.py  test_metrics.py  test_polytomy.py  test_validation.py  test_visualization.py
(+28 files in other folders)
